# 1brc-lang-c

./: .gitignore  CMakeLists.txt  README.md
src/: calc-avg-with-malloc.c  calc-avg-without-malloc.c  stats-1.pl
src/elapsed/: elapsed-time.c  elapsed-time.h
src/hashtable/: entity-test.cxx  entity.c  entity.h  hashtable-test.cxx  hashtable.c  hashtable.h
